<resources>
    <string name="app_name">NBA Team Viewer</string>
    <string name="filter">Sort by: </string>
    <string name="team_label">Team Name: </string>
    <string name="wins_label">Total Wins: </string>
    <string name="losses_label">Total Losses: </string>

    <!-- PLAYERS -->
    <string name="first_name_label">First Name: </string>
    <string name="last_name_label">Last Name: </string>
    <string name="position_label">Position: </string>
    <string name="number_label">Number: </string>


    <string-array name="filter_options">
        <item>Alphabetic</item>
        <item>Wins</item>
        <item>Losses</item>
    </string-array>
</resources>
